# nx-dbt

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Makefile  README.md  dagster.yaml  dbt_project  pyproject.toml  repository.py  workspace.yaml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: BUG.yml  FEATURE_REQUEST.yml
.github/workflows/: close-branch.yml  open-branch.yml
.platform/charts/dagster-template/: Chart.yaml  values.yaml
.platform/charts/dagster-template/templates/: _helpers.tpl  parameters_secretproviderclass.yaml  role.yaml  secretproviderclass.yaml  serviceaccount.yaml
.platform/charts/nx-dbt/: Chart.yaml  values.yaml
.platform/charts/nx-dbt/templates/: rolebinding.yaml  secretproviderclass.yaml
.platform/charts/nx-dbt/values/: production.yaml  sandbox.yaml
dagster/: dagster.yaml  pyproject.toml  repository.py  workspace.yaml
dagster/src/app/jobs/: say_hello.py
dagster/src/app/schedules/: my_hourly_schedule.py
dagster/src/app/sensors/: my_sensor.py
dagster/tests/app/: test_repository.py
dagster/tests/app/graphs/: test_say_hello.py
dagster/tests/app/ops/: test_hello.py
dagster_template/dagster/: __init__.py  repository.py
dagster_template/dagster/example/jobs/: say_hello.py
dagster_template/dagster/example/schedules/: my_hourly_schedule.py
dagster_template/dagster/example/sensors/: my_sensor.py
dagster_template/dagster/jobs/: say_hello.py
dagster_template/dagster/ops/: hello.py
dagster_template/dagster/schedules/: my_hourly_schedule.py
dagster_template/dagster/sensors/: my_sensor.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/checks/: k8s_checks.sql
dbt_project/models/costs/DEPRECATED/costs_silver/: _k8s_grouped_labels_per_date_tests.yml  k8s_grouped_labels_per_date.sql
dbt_project/models/costs/costs_gold/: _k8s_snowflake_costs_by_date_label_tests.yml  k8s_snowflake_costs_by_date_label.sql
dbt_project/models/costs/costs_silver/: _snowflake_warehouse_idle_costs_tests.yml  _stg_snowflake_costs_tests.yml  k8s_grouped_labels_per_date.sql  snowflake_warehouse_idle_costs.sql  stg_k8s.sql  stg_snowflake_costs.sql
dbt_project/models/costs/costs_staging/: __sources.yml
dbt_project/models/costs/costs_staging/k8s/: _stg_k8s_completed_jobs_all_tests.yml
dbt_project/models/costs/costs_staging/snowflake/: _stg_query_history_tests.yml  stg_query_attribution_history.sql
dbt_project/models/dt_silver/: snowflake_grouped_labels_per_date_dt.sql  stg_k8s_kubecost_all_dt.sql
dbt_project/models/internal/: __sources.yml  categories.sql  crons.sql  fa_executions.sql  stores.sql
dbt_project/models/internal/internal_staging/: engine_executions.sql  liquibase_databasechangelog.sql  preconfigured_executions.sql  product_history.sql  products.sql  replenishment_executions.sql  sales.sql  seasons.sql  store_stock_items.sql  store_transfers_execution_aggregates.sql  warehouse_stock_items.sql
dbt_project/models/sales_engineering/: br_general_product_typology.sql
dbt_project/models/silver/: snowflake_grouped_labels_per_date.sql  stg_snowflake_costs.sql
dbt_project/models/staging/: __sources.yml
dbt_project/models/staging/k8s/: _stg_k8s_completed_jobs_all_tests.yml
dbt_project/scripts/: generate_sources.py
dbt_project/tools/: __generate_models_internals_sources.py
docker/: Dockerfile  docker-compose.yaml
docker/dagster/: dagster.yaml  docker-compose.yaml  workspace.yaml
docker/dev/: Dockerfile-pdm  docker-compose-pdm.yml
nx_dbt/dagster/: __init__.py
nx_dbt/dagster/jobs/: assets.py  constants.py  definitions.py  say_hello.py  schedules.py
nx_dbt/dagster/schedules/: my_hourly_schedule.py
nx_dbt/dagster/sensors/: my_sensor.py
nx_dbt/dagster_template/dagster/: __init__.py
nx_dbt/dagster_template/dagster/schedules/: my_hourly_schedule.py
nx_dbt/dbt_project/: README.md  clients.yaml  dbt_project.yml  packages.yml  profiles.yml
nx_dbt/dbt_project/dbt_packages/dbt_date/integration_tests/: dbt_project.yml
nx_dbt/dbt_project/macros/: generate_schema_name.sql  query_tags.sql
nx_dbt/dbt_project/models/costs/costs_gold/: _k8s_snowflake_costs_by_date_label_tests.yml  k8s_snowflake_costs_by_date_label.sql
nx_dbt/dbt_project/models/costs/costs_silver/: _k8s_grouped_labels_per_date_tests.yml  _snowflake_grouped_labels_per_date_tests.yml  _snowflake_warehouse_idle_costs_tests.yml  _stg_k8s_costs_tests.yml  _stg_snowflake_costs_tests.yml  k8s_grouped_labels_per_date.sql  snowflake_grouped_labels_per_date.sql  snowflake_warehouse_idle_costs.sql  stg_k8s_costs.sql  stg_snowflake_costs.sql
nx_dbt/dbt_project/models/dt_silver/: dt_test.sql  k8s_snowflake_costs_by_date_label_dt.sql  stg_k8s_completed_jobs_all_dt.sql  stg_k8s_dt.sql  stg_snowflake_costs_dt.sql
nx_dbt/dbt_project/models/gold/: _k8s_snowflake_costs_by_date_label_tests.yml  k8s_snowflake_costs_by_date_label.sql
nx_dbt/dbt_project/models/internal/: __sources.yml
nx_dbt/dbt_project/models/marts/: customers.yml  old_query_tag_parser.sql  snowflake_costs.sql  snowflake_queries.sql
nx_dbt/dbt_project/models/okta/: __sources.yml
nx_dbt/dbt_project/models/sales_engineering/: br_general.sql  br_general_metrics.sql  br_general_product_typology.sql
nx_dbt/dbt_project/models/silver/: _stg_k8s_costs_tests.yml  dt_test.sql  stg_k8s_costs.sql  stg_snowflake_costs.sql
nx_dbt/dbt_project/models/staging/: __sources.yml  stg_k8s_kubecost.sql  stg_query_attribution_history.sql  stg_query_history.sql  stg_query_history.yml
nx_dbt/dbt_project/tools/: __generate_models_internals_sources.py
scripts/: clean-packages.sh  clean-pkg.sh  clean-pyc.sh  clean-test.sh  lint-check.sh  lint.sh  make-test.sh  pdm-config.sh  update-template.sh
tests/: test_repository.py
tests/dagster/: test_repository.py
tests/dagster/example/graphs/: test_say_hello.py
tests/dagster/example/ops/: test_hello.py
tests/dagster/graphs/: test_say_hello.py
tests/dagster/ops/: test_dbt_debug.py  test_hello.py
(+49 files in other folders)
