[project]
name = "dagster_template"
dynamic = ["version"]
description = ""
license = { text = "Nextail private use" }
authors = [
    {name = "nextail"},
]
dependencies = [
    "dagster==1.10.6",
    "dagster-cloud==1.10.6",
    "dagster-aws==0.26.6",
    "dagster-docker==0.26.6",
    "dagster-dbt==0.26.6",
    "dagster-k8s==0.26.6",
    "dagster-snowflake==0.26.6"
]
requires-python = ">=3.11, <3.12"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.4",
]
dev = [
    "dagster-webserver==1.10.6",
    "dagster-postgres==0.26.6",
    "debugpy==1.8.13",
    # linter and formatter
    "pre-commit==4.2.0",
    "black==25.1.0",                   # python formatter
    "ruff==v0.11.2",                   # python linter (flake8 compatible)
    "yamllint==1.37.0",                # yaml linter
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --ignore-glob=__pypackages__/**"

[tool.pyright]
pythonVersion = "3.11"
exclude = ["**/__pycache__", "**/__pypackages__"]
ignore = ["**/__pypackages__"]
reportGeneralTypeIssues = false                                      # to allow working with dagster resources retrieved from context

[tool.black]
line-length = 120
target-version = ["py311"]
preview = true

[tool.isort]
profile = "black"
py_version = "311"
line_length = 120

[tool.ruff]
extend-exclude = ["__pypackages__"]
line-length = 120
target-version = "py311"
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "N",   # pep8-naming
    "E",   # Pycodestyle
    "W",   # Pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "RUF", # Ruff-specific rules
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
