[project]
name = "dagster-template"
dynamic = ["version"]
description = ""
authors = [
    {name = "nextail"},
]
dependencies = [
    "dagster>=0.15.7",
    "dagit>=0.15.7",
    "dagster-graphql>=0.15.7",
    "dagster-postgres>=0.15.7",
    "dagster-aws>=0.15.7",
    "dagster-docker>=0.15.7",
    "dagster-cloud>=0.15.7",
    "dagster-dbt>=0.15.7",
    "dagster-k8s>=0.15.7",
]
requires-python = ">=3.9"
license = {text = "MIT"}


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]