[project]
name = "dagster-template"
dynamic = ["version"]
description = ""
authors = [
    {name = "nextail"},
]
dependencies = [
    "dagster>=1.1.2",
    "dagit>=1.1.2",
    "dagster-graphql>=1.1.2",
    "dagster-cloud>=1.1.2",
    "dagster-postgres",
    "dagster-aws",
    "dagster-docker",
    "dagster-dbt",
    "dagster-k8s",
]
requires-python = ">=3.9"
license = {text = "MIT"}


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]
debug = [
    "debugpy==1.6.3",
]